Implemented till creation of DepthStencilBuffer.

--- a/Isekai/Isekai.vcxproj
+++ b/Isekai/Isekai.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Direct3D.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="System.cpp" />
@@ -27,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Direct3D.h" />
     <ClInclude Include="Input.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
