--- a/Isekai/Isekai.vcxproj.filters
+++ b/Isekai/Isekai.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClCompile Include="System.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Direct3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Direct3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
